// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Social Icons block transforms to Columns block 1`] = `
"<!-- fin:columns -->
<div class="fin-block-columns"><!-- fin:column {"width":"100%"} -->
<div class="fin-block-column" style="flex-basis:100%"><!-- fin:social-links -->
<ul class="fin-block-social-links"><!-- fin:social-link {"url":"https://finpress.org","service":"finpress"} /-->

<!-- fin:social-link {"service":"facebook"} /-->

<!-- fin:social-link {"service":"twitter"} /-->

<!-- fin:social-link {"service":"instagram"} /--></ul>
<!-- /fin:social-links --></div>
<!-- /fin:column --></div>
<!-- /fin:columns -->"
`;

exports[`Social Icons block transforms to Group block 1`] = `
"<!-- fin:group {"layout":{"type":"constrained"}} -->
<div class="fin-block-group"><!-- fin:social-links -->
<ul class="fin-block-social-links"><!-- fin:social-link {"url":"https://finpress.org","service":"finpress"} /-->

<!-- fin:social-link {"service":"facebook"} /-->

<!-- fin:social-link {"service":"twitter"} /-->

<!-- fin:social-link {"service":"instagram"} /--></ul>
<!-- /fin:social-links --></div>
<!-- /fin:group -->"
`;
